# nezumo-server

./: .env.example  .gitignore  COMMERCIAL-LICENSE.md  Cargo.toml  README.md
.cargo/: config.toml
.sqlx/: query-03163b6a92a329d078432c332db3f9e3b55b20646083ee9657819f5e6343babc.json  query-089b3e00ed422930e0b0d3b26f2bf993229d2aba70e39870c239b547e78a858e.json  query-0cc7ffa32d61e5f42a3dbc5f2e2b0f9b636c0a92f9b434a0ffbbd47c198327ce.json  query-0d122cb7ad59f6f43d2177c2c71e186b41eadda958cc700fe6f143bb0dc4f107.json  query-18345ea36aa9effd287c81f2b4e8b77e5f862b2beb5c46c8e07640526c5214e8.json  query-1edfd0425b9c6cd8b20b47752fbe12f943d8e6b6bc8262f51507797cf9e91113.json  query-1fa66bea231cd67df00bece293c39ac7b5cf38291d66f2ed0cf250e4e697db23.json  query-2ae62b2f9a9a03122ffe06d7ec2c473cb308a05cf321b8e052a95c4ee2a19694.json  query-2b74fa4aaeb8925689e9e78550b21dfb4f6ac88b53746d1ad63a6e073134caa9.json  query-2e36e4d18f9471c100ccabeb1891c0ff3823def05cc91ab67b82a3bc2077e02e.json  query-2ed4a7a325f8cd6836c159610eca7476aaade5e351f88ff8c9ad12f2a9494a14.json  query-36504a9c1274a1e2a95efaf1a63e9416a480ffbbbb43055d9bb9b2c9db96113a.json  query-3a644b5b9fe372e83b5c09efbd39597b3a39a865c168c9f92045435894d844f4.json  query-3a8f4b8f8d5ea446cefece4a126c7c270964ce1124844de25264c3fe6b8172a8.json  query-3c0ec0f897cc004befeca7008f4d2c4ce590bc54b1338070e9ffe1df24a44430.json  query-3c3d20cb20eff1a8efb1c88ff01a8802b59e8b5febfbd32b282b81523ac28c50.json  query-3e7a2f9098533569c459039796bcad3dfef343b021cb42608d53b4cc1fd78e60.json  query-402f7158f15a0a4cd2ebe707223f99e7c123eab517a920308dbcf621e4a85351.json  query-425da41566025ceb6961ab3ddade97ff752f4f0201af04c638b454317998f3d7.json  query-49ef3de19b99a786cb2bf4c3400e62d779f10e24d7764bd78800e281f372510d.json  query-4a5436299f8e1ea26d97a2087cb49d7847cd24b4cb007bea2d70103b34ef8709.json  query-4e25efd0a85af0d9791cfd81db063b590236b5d5d136e8ca9e295e87e1d98212.json  query-5f931035234ccaea3054306c94510b53831d3f7a0e6f0474c4d69b0abf02c275.json  query-63f29b63509e15b5392ee9aeae4fcad1cb2e5345dd001f80d04552e9cf141823.json  query-6df375125ecb68aa241f8ac84c318cbd70042524bc1ee1f79e65836d02e4174e.json  query-730f22c02094614968f939a3a9f90894acc4ba4df3bd535f7bdb39dd87e5bdda.json  query-732682ff58eb1e83eb96c40e289506946df86dc9b482de3d19376a3a433bfd3a.json  query-73dc1a48a7d9b7b5a46cb4560e59916c9c1c468b3590c66e91626f41790838a9.json  query-78b515b5e4dba6f957ff34641b44d292ccc5e825f0c87fb09031892a3d0e258a.json  query-7a23b5b8b443f44e25d99d7b7e4fda4bff31e9575e5c21e1d6e413d6ddc779b2.json  query-7cf708190d18494129ad28d197ca2e458ff8b8abe8d264b80ef0a2d52a45704a.json  query-7efc156cc5dc59a53610aff5dd30e84b23dcf3d55dfdff959054f38be632d139.json  query-8ca8d01324a80cf0628631ebc4fcdfcda0e0f964ccc31024fde2fae909b383c7.json  query-96998d18ff747b4d629206ff89764c1f4adcec0d5c2a8eda100f731e5411d335.json  query-9c85c2181e5f5283e91b7f0ca128636fb33ac2e2100375d1c465c77f7bdaaf77.json  query-a1eadab02c07c2b06c46ea9ba687f4363fb1f9c4229fe0b656d0408194651a59.json  query-a7fe9c7d966c71428acacaf264ec96f9edc4319423977c2f8d20be62868e2b9a.json  query-b27f6d5bb762bf8f752fd4542b91866eae31be8fed892232d6af0ce7af9e6c69.json  query-b38fbe8b7a685078cff50874805b6e560c2072f172ce36b034c548bbd083c8ef.json  query-b70e30d6de30a3243f73ce59b3cf8225bdd42f7f6efb4e551c6c3ca016517278.json  (+11 more)
deploy/: nezumo.service
docker/: Dockerfile  Dockerfile.dockerignore  compose.dev.yml  compose.loadbalanced.yml  compose.yml
documentation/: github_actions_deployment.md  installation_ubuntu.md  openapi.json
fonts/: fonts.json
migrations/: 20250128160119_create_users_table.sql  20260209120000_create_projects_table.sql  20260209120010_create_boards_table.sql  20260209120020_create_board_members_table.sql  20260209120030_create_board_events_table.sql  20260209120040_create_board_snapshots_table.sql  20260209120050_create_oauth_accounts_table.sql  20260209120100_create_project_members_table.sql  20260209123000_create_login_challenges_table.sql  20260210120000_add_board_view_settings.sql  20260210150000_create_board_files_table.sql  20260217120000_add_session_id_to_board_events.sql  20260218120000_add_project_is_favorite.sql  (+26 more)
src/: main.rs  realtime.rs
(+157 files in other folders)
